--- a/lab-2/index.html
+++ b/lab-2/index.html
@@ -6,7 +6,15 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>Lab 2</h1>
-    <a href="..">Powrót</a>
+    <h1>Oskar Marzec</h1>
+    <nav>
+      <p>LAB2</p>
+      <ul>
+        <li><a href="">Flexbox</a></li>
+        <li><a href="">Grid</a></li>
+        <li><a href="">Galeria</a></li>
+        <li><a href="..">Powrót</a></li>
+      </ul>
+    </nav>
   </body>
 </html>
