--- a/lab-2/index.html
+++ b/lab-2/index.html
@@ -10,7 +10,7 @@
     <nav>
       <p>LAB2</p>
       <ul>
-        <li><a href="">Flexbox</a></li>
+        <li><a href="flex.html">Flexbox</a></li>
         <li><a href="">Grid</a></li>
         <li><a href="">Galeria</a></li>
         <li><a href="..">Powrót</a></li>
