--- a/lab-2/index.html
+++ b/lab-2/index.html
@@ -11,7 +11,7 @@
       <p>LAB2</p>
       <ul>
         <li><a href="flex.html">Flexbox</a></li>
-        <li><a href="">Grid</a></li>
+        <li><a href="grid.html">Grid</a></li>
         <li><a href="">Galeria</a></li>
         <li><a href="..">Powrót</a></li>
       </ul>
