--- a/lab-2/index.html
+++ b/lab-2/index.html
@@ -12,7 +12,7 @@
       <ul>
         <li><a href="flex.html">Flexbox</a></li>
         <li><a href="grid.html">Grid</a></li>
-        <li><a href="">Galeria</a></li>
+        <li><a href="galeria.html">Galeria</a></li>
         <li><a href="..">Powrót</a></li>
       </ul>
     </nav>
